feat: add theme colors, focus and hover styles

--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -6,12 +6,21 @@
     & Entwicklung <a
       href="https://andreasremdt.com"
       target="_blank"
+      class="rounded-sm text-gray-900 underline hover:text-primary-900 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary-900"
       rel="nofollow noreferrer noopener">Andreas Remdt</a
     >.
   </p>
 
   <nav class="space-x-4 md:space-x-8">
-    <a href="/impressum">Impressum</a>
-    <a href="/datenschutz">Datenschutz</a>
+    <a
+      href="/impressum"
+      class="rounded-sm transition-colors hover:text-primary-900 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary-900"
+      >Impressum</a
+    >
+    <a
+      href="/datenschutz"
+      class="rounded-sm transition-colors hover:text-primary-900 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary-900"
+      >Datenschutz</a
+    >
   </nav>
 </footer>
