--- a/src/components/card.astro
+++ b/src/components/card.astro
@@ -14,7 +14,7 @@ const { title, date, image, href } = Astro.props;
 ---
 
 <article
-  class="group relative overflow-hidden rounded-xl shadow-lg after:absolute after:inset-0 after:z-0 after:rounded-xl after:bg-gradient-to-b after:from-transparent after:to-gray-900/80"
+  class="focus-within:outline-3 group relative overflow-hidden rounded-xl shadow-lg after:absolute after:inset-0 after:z-0 after:rounded-xl after:bg-gradient-to-b after:from-transparent after:to-gray-900/80 focus-within:outline focus-within:outline-offset-2 focus-within:outline-primary-900"
 >
   {
     image && (
@@ -39,7 +39,11 @@ const { title, date, image, href } = Astro.props;
       ) : null
     }
     <h3 class="h4">
-      <a href={href} class="text-white after:absolute after:inset-0">{title}</a>
+      <a
+        href={href}
+        class="text-white after:absolute after:inset-0 focus-visible:outline-none"
+        >{title}</a
+      >
     </h3>
   </div>
 </article>
