--- a/src/layout/default.astro
+++ b/src/layout/default.astro
@@ -4,7 +4,7 @@ import Footer from "@/components/footer.astro";
 import "@/styles/base.css";
 ---
 
-<html lang="de">
+<html lang="de" class="scroll-smooth">
   <head>
     <meta charset="UTF-8" />
     <meta name="author" content="Andreas Remdt" />
@@ -23,9 +23,15 @@ import "@/styles/base.css";
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5" />
   </head>
   <body class="leading-relaxed text-gray-600">
+    <a
+      href="#content"
+      class="btn btn-primary absolute -top-1 left-1/2 z-10 -translate-x-1/2 -translate-y-full rounded-t-none transition-transform focus:translate-y-0"
+      >Zum Inhalt springen</a
+    >
+
     <Header />
 
-    <main class="mx-auto max-w-7xl px-4 md:px-8">
+    <main class="mx-auto max-w-7xl px-4 md:px-8" id="content">
       <slot />
     </main>
 
