--- a/src/layout/default.astro
+++ b/src/layout/default.astro
@@ -1,5 +1,5 @@
 ---
-import Header from "@/components/header.astro";
+import PageNavigation from "@/components/page-navigation.astro";
 import Footer from "@/components/footer.astro";
 import "@/styles/base.css";
 ---
@@ -29,7 +29,7 @@ import "@/styles/base.css";
       >Zum Inhalt springen</a
     >
 
-    <Header />
+    <PageNavigation />
 
     <main class="mx-auto max-w-7xl px-4 md:px-8" id="content">
       <slot />
