--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -38,4 +38,35 @@
   .h4 {
     @apply text-lg font-bold leading-tight text-gray-900 lg:text-xl;
   }
+
+  .hero-gallery {
+    @apply grid grid-cols-3 grid-rows-2 gap-8;
+  }
+
+  .hero-gallery img:nth-child(1) {
+    grid-row: 2 / 3;
+    grid-column: 1 / 2;
+    transform: translateY(10%);
+  }
+
+  .hero-gallery img:nth-child(2) {
+    grid-row: 1 / 2;
+    grid-column: 2 / 3;
+    transform: translateY(50%);
+  }
+
+  .hero-gallery img:nth-child(3) {
+    grid-row: 2 / 3;
+    grid-column: 2 / 3;
+    transform: translateY(50%);
+  }
+  .hero-gallery img:nth-child(4) {
+    grid-row: 1 / 2;
+    grid-column: 3 / 4;
+  }
+
+  .hero-gallery img:nth-child(5) {
+    grid-row: 2 / 3;
+    grid-column: 3 / 4;
+  }
 }
