feat: add news collection

--- a/src/pages/news/[...slug].astro
+++ b/src/pages/news/[...slug].astro
@@ -1,26 +1,26 @@
 ---
+import { getCollection } from "astro:content";
 import { Image } from "astro:assets";
 import Hero from "@/components/hero.astro";
 import Layout from "@/layout/default.astro";
 
 import hausbootfahrt from "@/images/hausbootfahrt.jpeg";
 
-export function getStaticPaths() {
-  return [
-    {
-      params: { slug: "test" },
-      props: {},
-    },
-  ];
+export async function getStaticPaths() {
+  const news = await getCollection("news");
+
+  return news.map((entry) => ({
+    params: { slug: entry.slug },
+    props: { entry },
+  }));
 }
+
+const { entry } = Astro.props;
+const { Content } = await entry.render();
 ---
 
 <Layout>
-  <Hero
-    title="Freudiges Ziehen am selben Strang: trinationale Hausbootfahrt 2023"
-    >Trinationale Hausbootfahrt der Regio Lions mit Jugendlichen aus den drei
-    Nachbarländern / Förderung durch die Oberrheinkonferenz
-  </Hero>
+  <Hero title={entry.data.title}>{entry.data.excerpt} </Hero>
 
   <div class="mx-auto md:w-2/3">
     <figure class="mb-12 md:-mx-24 xl:-mx-52">
@@ -56,17 +56,9 @@ export function getStaticPaths() {
       </figcaption>
     </figure>
 
-    <p class="mb-4">
-      „Es war einfach genial!“ – Diesem Fazit stimmten alle Beteiligten zu. Bei
-      der Fahrt auf dem Rhein-Marne-Kanal wurde vier Tage lang ein
-      freundschaftliches Miteinander gepflegt. Die 30 Schlafplätze auf den vier
-      in Niderviller gemieteten Booten waren für Jugendliche im Alter zwischen
-      14 und 18 Jahren aus dem Landkreis Lörrach (7), aus dem Raum Basel (7) und
-      dem Elsass (10) und für Betreuer aus dem Lions Club Weil sowie dem
-      Leo-Club Weil am Rhein gebucht worden.
-    </p>
+    <Content />
 
-    <figure class="my-6 md:-mx-24 md:my-12 lg:-mx-32">
+    <!-- <figure class="my-6 md:-mx-24 md:my-12 lg:-mx-32">
       <img
         src="https://placehold.co/500x300"
         alt="placeholder image for later purposes"
@@ -74,42 +66,7 @@ export function getStaticPaths() {
         height="300"
         class="w-full rounded-xl shadow-lg"
       />
-    </figure>
-
-    <p class="mb-4">
-      Bei 26 Schleusendurchfahrten waren die Jungen und Mädchen beim Halten der
-      Boote gefordert: Mit vereinten Kräften wurde sozusagen am selben Strang
-      gezogen. Ebenso wie beim gemeinsamen Kochen und beim Abwasch zeigte es
-      sich, dass dabei auf jedermann Verlass war.
-    </p>
-
-    <p class="mb-4">
-      Gut kamen die sportliche Betätigung auf einem Outdoor-Fitness-Parcours,
-      ein Abstecher in eine Glasbläserei sowie ein Stadtbummel in Saverne an.
-      Dabei erfuhren die Jugendlichen auch etwas aus dem Leben und Wirken von
-      Louise Weiss, einer Frauenrechtlerin und Kämpferin für ein geeintes
-      Europa. Auch Führungen zur Stadtgeschichte, die von Mitgliedern des Lions
-      Clubs Saverne angeboten wurden, standen auf dem Programm.
-    </p>
-
-    <p class="mb-4">
-      Weil das Freizeitbad in Saverne wegen Renovierungsarbeiten geschlossen
-      hatte, behalf sich die muntere Gruppe bei großer Hitze mehrfach mit
-      Wasserschlachten. Zum Glück verfügten alle Boote über große Wasservorräte
-      und Außenduschen.
-    </p>
-
-    <p class="mb-4">
-      An allen Abenden wurde mit Begeisterung „Werwolf“ gespielt. Und in Saverne
-      konnte ein Freilichtkonzert mit Hip-Hop Battle besucht werden.
-    </p>
-
-    <p>
-      Finanziert wurde die Unternehmung zu etwa gleichen Teilen mit dem Erlös
-      aus dem Festbetrieb beim diesjährigen Dreiländerlauf in Basel und einem
-      Zuschuss aus dem Jugendfonds der Deutsch-Französisch-Schweizerischen
-      Oberrheinkonferenz.
-    </p>
+    </figure> -->
 
     <figure
       class="mt-6 grid grid-cols-2 gap-4 md:mt-12 md:grid-cols-3 md:gap-8"
