--- a/src/pages/news.astro
+++ b/src/pages/news.astro
@@ -1,9 +1,12 @@
 ---
+import { getCollection } from "astro:content";
 import Hero from "@/components/hero.astro";
 import NewsPreview from "@/components/news-preview.astro";
 import Layout from "@/layout/default.astro";
 
 import hausbootfahrt from "@/images/hausbootfahrt.jpeg";
+
+const news = await getCollection("news");
 ---
 
 <Layout>
@@ -17,45 +20,17 @@ import hausbootfahrt from "@/images/hausbootfahrt.jpeg";
   <div
     class="mb-16 grid grid-cols-1 gap-x-4 gap-y-16 sm:grid-cols-2 md:gap-x-8 lg:grid-cols-1"
   >
-    <NewsPreview
-      title="Adventskalender 2023"
-      date={new Date()}
-      excerpt="saLorem ipsum dolor sit amet, consectetur adipisicing elit.d Lorem ipsum dolor sit amet, consectetur adipisicing elit. Lorem ipsum dolor sit amet, consectetur adipisicing elit."
-      href="/news/test"
-      image={hausbootfahrt}
-    />
-
-    <NewsPreview
-      title="Adventskalender 2023"
-      date={new Date()}
-      excerpt="saLorem ipsum dolor sit amet, consectetur adipisicing elit.d Lorem ipsum dolor sit amet, consectetur adipisicing elit. Lorem ipsum dolor sit amet, consectetur adipisicing elit."
-      href="/news/test"
-      image={hausbootfahrt}
-    />
-
-    <NewsPreview
-      title="Adventskalender 2023"
-      date={new Date()}
-      excerpt="saLorem ipsum dolor sit amet, consectetur adipisicing elit.d Lorem ipsum dolor sit amet, consectetur adipisicing elit. Lorem ipsum dolor sit amet, consectetur adipisicing elit."
-      href="/news/test"
-      image={hausbootfahrt}
-    />
-
-    <NewsPreview
-      title="Adventskalender 2023"
-      date={new Date()}
-      excerpt="saLorem ipsum dolor sit amet, consectetur adipisicing elit.d Lorem ipsum dolor sit amet, consectetur adipisicing elit. Lorem ipsum dolor sit amet, consectetur adipisicing elit."
-      href="/news/test"
-      image={hausbootfahrt}
-    />
-
-    <NewsPreview
-      title="Adventskalender 2023"
-      date={new Date()}
-      excerpt="saLorem ipsum dolor sit amet, consectetur adipisicing elit.d Lorem ipsum dolor sit amet, consectetur adipisicing elit. Lorem ipsum dolor sit amet, consectetur adipisicing elit."
-      href="/news/test"
-      image={hausbootfahrt}
-    />
+    {
+      news.map((entry) => (
+        <NewsPreview
+          title={entry.data.title}
+          date={new Date()}
+          excerpt={entry.data.excerpt}
+          href={`/news/${entry.slug}`}
+          image={hausbootfahrt}
+        />
+      ))
+    }
   </div>
 
   <nav class="flex justify-center gap-x-1">
