--- a/src/components/news-preview.astro
+++ b/src/components/news-preview.astro
@@ -22,7 +22,7 @@ const { title, date, image, excerpt, href } = Astro.props;
         alt="placeholder image for later purposes"
         width="250"
         height="250"
-        class="h-64 w-full rounded-xl object-cover shadow-lg lg:h-auto lg:w-auto lg:max-w-64"
+        class="h-64 w-full rounded-xl object-cover shadow-lg lg:aspect-square lg:h-auto lg:w-auto lg:max-w-64"
       />
     )
   }
@@ -31,11 +31,7 @@ const { title, date, image, excerpt, href } = Astro.props;
       >{formatDate(date)}</time
     >
     <h2 class="h4 mb-6 mt-1">
-      <a
-        href={href}
-        class="rounded-sm transition-colors hover:text-primary-900 focus-visible:text-primary-900 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary-900"
-        >{title}</a
-      >
+      {title}
     </h2>
     <p>
       {excerpt}
