feat: add tailwind typography

--- a/src/pages/news/[slug].astro
+++ b/src/pages/news/[slug].astro
@@ -56,7 +56,9 @@ const { Content } = await entry.render();
       </figcaption>
     </figure>
 
-    <Content />
+    <div class="prose max-w-none">
+      <Content />
+    </div>
 
     <!-- <figure class="my-6 md:-mx-24 md:my-12 lg:-mx-32">
       <img
