--- a/src/components/news-preview.astro
+++ b/src/components/news-preview.astro
@@ -19,7 +19,7 @@ const { title, date, image, excerpt, href } = Astro.props;
     image && (
       <Image
         src={image}
-        alt="placeholder image for later purposes"
+        alt=""
         width="250"
         height="250"
         class="h-64 w-full rounded-xl object-cover shadow-lg lg:aspect-square lg:h-auto lg:w-auto lg:max-w-64"
