--- a/src/components/news-preview.astro
+++ b/src/components/news-preview.astro
@@ -5,7 +5,7 @@ import { Image } from "astro:assets";
 
 interface Props {
   title: string;
-  href: string;
+  href?: string;
   excerpt: string;
   date: Date;
   image?: ImageMetadata;
@@ -26,8 +26,8 @@ const { title, date, image, excerpt, href } = Astro.props;
       />
     )
   }
-  <div class="flex flex-col justify-center">
-    <time datetime={date.toISOString()} class="text-sm text-gray-500"
+  <div class="flex flex-col items-start">
+    <time datetime={date.toISOString()} class="mt-4 text-sm text-gray-500"
       >{formatDate(date)}</time
     >
     <h2 class="h4 mb-6 mt-1">
@@ -36,6 +36,14 @@ const { title, date, image, excerpt, href } = Astro.props;
     <p>
       {excerpt}
     </p>
-    <a href={href} class="btn btn-secondary mt-6 w-max"> Weiterlesen &rarr; </a>
+
+    {
+      href ? (
+        <a href={href} class="btn btn-secondary mt-6">
+          {" "}
+          Weiterlesen &rarr;{" "}
+        </a>
+      ) : null
+    }
   </div>
 </article>
