--- a/src/components/card.astro
+++ b/src/components/card.astro
@@ -1,16 +1,16 @@
 ---
-import { Image } from "astro:assets";
-import { type ImageMetadata } from "astro";
+import { Picture } from "astro:assets";
 import { formatDate } from "@/lib/utils";
 
 interface Props {
   title: string;
   href: string;
   date?: Date;
-  image?: ImageMetadata;
+  image?: string;
+  external?: boolean;
 }
 
-const { title, date, image, href } = Astro.props;
+const { title, date, image, href, external } = Astro.props;
 ---
 
 <article
@@ -18,11 +18,13 @@ const { title, date, image, href } = Astro.props;
 >
   {
     image && (
-      <Image
+      <Picture
         src={image}
-        alt={`bild vom ${title}`}
-        width="400"
-        height="400"
+        formats={["avif", "webp"]}
+        alt=""
+        width={400}
+        quality={80}
+        height={400}
         class="aspect-square h-full max-h-72 w-full object-cover transition-transform duration-500 group-hover:scale-110 sm:max-h-none"
       />
     )
@@ -41,6 +43,8 @@ const { title, date, image, href } = Astro.props;
     <h3 class="h4">
       <a
         href={href}
+        rel={external ? "noopener nofollow noreferrer" : undefined}
+        target={external ? "_blank" : undefined}
         class="text-white after:absolute after:inset-0 focus-visible:outline-none"
         >{title}</a
       >
