--- a/src/pages/news/[slug].astro
+++ b/src/pages/news/[slug].astro
@@ -1,10 +1,8 @@
 ---
 import { getCollection } from "astro:content";
-import { Image } from "astro:assets";
+import { Picture } from "astro:assets";
 import Hero from "@/components/hero.astro";
 import Layout from "@/layout/default.astro";
-
-import hausbootfahrt from "@/images/hausbootfahrt.jpeg";
 
 export async function getStaticPaths() {
   const news = await getCollection("news");
@@ -25,38 +23,42 @@ const { Content } = await entry.render();
   <Hero title={entry.data.title}>{entry.data.excerpt} </Hero>
 
   <div class="mx-auto md:w-2/3">
-    <figure class="mb-12 md:-mx-24 xl:-mx-52">
-      <Image
-        src={hausbootfahrt}
-        alt="placeholder image for later purposes"
-        width="1000"
-        height="600"
-        class="mb-4 w-full rounded-xl shadow-lg"
-      />
-      <figcaption class="flex">
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          fill="none"
-          viewBox="0 0 24 24"
-          aria-hidden="true"
-          stroke-width="1.5"
-          stroke="currentColor"
-          class="mr-2 h-5 w-5 flex-shrink-0 text-gray-400"
-        >
-          <path
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            d="m11.25 11.25.041-.02a.75.75 0 0 1 1.063.852l-.708 2.836a.75.75 0 0 0 1.063.853l.041-.021M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Zm-9-3.75h.008v.008H12V8.25Z"
-          ></path>
-        </svg>
+    {
+      entry.data.image ? (
+        <figure class="mb-12 md:-mx-24 xl:-mx-52">
+          <Picture
+            src={entry.data.image.src}
+            formats={["avif", "webp"]}
+            alt={entry.data.image.alt || ""}
+            width={1200}
+            quality={80}
+            height={800}
+            class="mb-4 max-h-[800px] w-full rounded-xl object-cover shadow-lg"
+          />
 
-        <p class="text-sm text-gray-500">
-          Gruppenfoto am Louise Weiss – Brunnen in Saverne. Jugendliche aus der
-          Dreiländerecke durften auf Einladung der Regio Lions eine viertägige
-          gemeinsame Freizeit genießen.
-        </p>
-      </figcaption>
-    </figure>
+          {entry.data.image.caption ? (
+            <figcaption class="flex">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 24 24"
+                aria-hidden="true"
+                stroke-width="1.5"
+                stroke="currentColor"
+                class="mr-2 h-5 w-5 flex-shrink-0 text-gray-400"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  d="m11.25 11.25.041-.02a.75.75 0 0 1 1.063.852l-.708 2.836a.75.75 0 0 0 1.063.853l.041-.021M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Zm-9-3.75h.008v.008H12V8.25Z"
+                />
+              </svg>
+              <p class="text-sm text-gray-500">{entry.data.image.caption}</p>
+            </figcaption>
+          ) : null}
+        </figure>
+      ) : null
+    }
 
     <div class="prose max-w-none">
       <Content />
