--- a/src/components/card.astro
+++ b/src/components/card.astro
@@ -14,7 +14,7 @@ const { title, date, image, href, external } = Astro.props;
 ---
 
 <article
-  class="focus-within:outline-3 group relative overflow-hidden rounded-xl shadow-lg after:absolute after:inset-0 after:z-0 after:rounded-xl after:bg-gradient-to-b after:from-transparent after:to-gray-900/80 focus-within:outline focus-within:outline-offset-2 focus-within:outline-primary-900"
+  class="focus-within:outline-3 group relative min-h-52 overflow-hidden rounded-xl shadow-lg after:absolute after:inset-0 after:z-0 after:rounded-xl after:bg-gradient-to-b after:from-transparent after:to-gray-900/80 focus-within:outline focus-within:outline-offset-2 focus-within:outline-primary-900 md:aspect-square"
 >
   {
     image && (
